--- a/docs/blog/posts/regulism_regularism/index.qmd
+++ b/docs/blog/posts/regulism_regularism/index.qmd
@@ -4,5 +4,5 @@ categories: phil
 draft: true
 ---
 I also see prescriptivism and descriptivism (in linguistics) in Sellars' 
-distinction in [Some Reflections on Language Games](/docs/phil/people/sellars/works/some_reflections/index.qmd) 
-between [regulism vs regularism](/docs/phil/people/brandom/sellars09/2/index.qmd).
+distinction in [Some Reflections on Language Games](/docs/phil/people/sellars/works/some_reflections) 
+between [regulism vs regularism](/docs/phil/people/brandom/sellars09/2).
