--- a/docs/math/sketches/5/_1.md
+++ b/docs/math/sketches/5/_1.md
@@ -3,7 +3,7 @@
 - Model system behavior as the passing around and processing of signals (e.g. real numbers).
 - Interaction can be thought of as variable sharing
     - Physical coupling between train cars forces their velocity to be the same
-- Categorical treatment of [co-design problems](../4/index.qmd) allowed us to evaluate composite feasibility relation from a diagram of simpler feasibility relations.
+- Categorical treatment of [co-design problems](../4) allowed us to evaluate composite feasibility relation from a diagram of simpler feasibility relations.
     - Likewise we can evaluate whether two different signal flow graphs specify the same composite system
     - (perhaps to validate that a system meets a given specification)
 - Symmetric monoidal preorders were a special class of symmetric monoidal 
