--- a/docs/phil/people/hume/index.qmd
+++ b/docs/phil/people/hume/index.qmd
@@ -33,7 +33,7 @@ The facts don't settle which of the things that actually happened *had to
 happen*, nor which of the things that didn't happen *were still possible*, i.e.
 not ruled out by laws concerning what did happen.
 
-So, Hume (and [Quine](/docs/phil/people/quine/index.qmd)) took it that 
+So, Hume (and [Quine](/docs/phil/people/quine)) took it that 
 epistemologically (but mostly 
 semantically) fastidious philosophers faced a stark choice, either:
 
@@ -43,10 +43,10 @@ about laws and possibility and necessity and so on.
 
 Hume saw that there was nothing that you could be labeling (or in his sense, 
 describing) by these statements of laws. This is why Hume woke 
-[Kant](/docs/phil/people/kant/index.qmd) from his dogmatic slumbers.
+[Kant](/docs/phil/people/kant) from his dogmatic slumbers.
 
 This stems from a kind of 
-[semantic nominalism](/docs/phil/people/brandom/sellars09/4/#semantic-nominalism) 
+[semantic nominalism](/docs/phil/people/brandom/sellars09/4#semantic-nominalism) 
 that drew sharp lines around what you couldn't describe. Hume understood 
 saying/thinking something *as* describing something. It falls out of this that 
 saying how things might have been (or how things had to be) isn't describing 
