--- a/docs/phil/situations/pluto.qmd
+++ b/docs/phil/situations/pluto.qmd
@@ -11,7 +11,7 @@ listing:
     - ../../../backlinks/docs/phil/situations/pluto.yml
 ---
 
-Example from [Brandom writing about Sellars](/docs/phil/people/brandom/works/two_ply/index.qmd).
+Example from [Brandom writing about Sellars](/docs/phil/people/brandom/works/two_ply).
 
 Pluto was first postulated in order to explain perturbations in the orbit of 
 Neptune (by inference from Newton's laws). At that point, Pluto was a purely 
