--- a/docs/phil/distinctions/broken/analytic_synthetic.qmd
+++ b/docs/phil/distinctions/broken/analytic_synthetic.qmd
@@ -13,8 +13,8 @@ listing:
 
 This intuitive distinction is explained 
 [here](/docs/phil/distinctions/made/analytic_synthetic.qmd) 
-but is broken in [Quine](/docs/phil/people/quine/index.qmd)'s 
-[Two Dogmas of Empiricism](/docs/phil/people/quine/works/two_dogmas/index.qmd).
+but is broken in [Quine](/docs/phil/people/quine)'s 
+[Two Dogmas of Empiricism](/docs/phil/people/quine/works/two_dogmas).
 What is challenged is the very notion of analyticity, 
 i.e. that the analytic-synthetic distinction can be made at all.
 
@@ -34,7 +34,7 @@ Quine's conclusion: we should cease to make the following distinctions:
 Because all there is is the use of our expressions, and the usage is what 
 determines both the meanings and what we take to be true.
 
-Quine's target is [Carnap](/docs/phil/people/carnap/index.qmd) (who is thinking 
+Quine's target is [Carnap](/docs/phil/people/carnap) (who is thinking 
 of artificial languages: first you fix 
 the language, and then you go into the world to see which are true in virtue of 
 what they mean).
