--- a/docs/phil/elucidations/11.qmd
+++ b/docs/phil/elucidations/11.qmd
@@ -35,7 +35,7 @@ published: May 7, 2010
       artificial-seeming) this becomes.
 # Is Wittgenstein criticizing Plato?
 - If Wittgenstein is not strictly criticizing Augustine, is he at least 
-  criticizing [Plato](/docs/phil/people/plato/index.qmd)?
+  criticizing [Plato](/docs/phil/people/plato)?
   - Wittgenstein quotes Theatetus picture of language: Socrates is presenting 
     something he has heard and he concludes we don't really understand it.
   - Wittgenstein considers himself in a common struggle with Plato and 
