--- a/docs/phil/elucidations/14.qmd
+++ b/docs/phil/elucidations/14.qmd
@@ -27,9 +27,9 @@ listing:
     scenario in which you are having the same phenomenological experience yet 
     there is no table, so how can you know whether you are in that scenario vs 
     the genuine experience scenario?"
-    - Examples: dreaming, [evil genius](/docs/phil/people/descartes/index.qmd), 
+    - Examples: dreaming, [evil genius](/docs/phil/people/descartes), 
       [brain in a vat](/docs/phil/problems/skepticism.qmd) (from 
-      [Putnam](/docs/phil/people/putnam/index.qmd))
+      [Putnam](/docs/phil/people/putnam))
 
 # Argument against brain in a vat skepticism
 - These are not a general anti-skeptic arguments, but other skeptical tactics 
@@ -49,8 +49,8 @@ tantamount to experience.
 
 ## There are reasons to believe brains in vats cannot think
 Drawing from thoughts of 
-[John MacDowell](/docs/phil/people/macdowell/index.qmd)'s 
-[Mind and World](/docs/phil/people/macdowell/works/mind_and_world/index.qmd):
+[John MacDowell](/docs/phil/people/macdowell)'s 
+[Mind and World](/docs/phil/people/macdowell/works/mind_and_world):
 
 - For a thought to be 'about' an object (world-directed, with empirical 
   content) - it's necessary that the correctness of the thought to be answerable 
@@ -61,7 +61,7 @@ Drawing from thoughts of
   the world, so it's not fair to say it has thoughts or intentions.
 
 # Why even bother thinking about skeptic challenges?
-- [Stanley Cavell](/docs/phil/people/cavell/index.qmd) has written well about 
+- [Stanley Cavell](/docs/phil/people/cavell) has written well about 
   how skeptical lines of thought arise
   naturally (i.e. they are not purely the product of academic philosophy).
 - Skepticism shows up in lots of fields/subfields of philosophy, and it's 
