--- a/docs/phil/people/brandom/antirep/1/index.qmd
+++ b/docs/phil/people/brandom/antirep/1/index.qmd
@@ -25,7 +25,7 @@ categories: 🟠
 
 ## The invention of representation
 
-[Descartes](/docs/phil/people/descartes/index.qmd) invents representation with 
+[Descartes](/docs/phil/people/descartes) invents representation with 
 relationships between algebra (representation) and geometry 
 (represented/reality).
 
@@ -40,7 +40,7 @@ relationships between algebra (representation) and geometry
   nonrepresentationally (to avoid infinite regress)
     - Representationalism gives rise to choice between epistemological 
       skepticism vs foundationalism.
-    - A [Kantian](/docs/phil/people/kant/index.qmd) insight: the *real* problem 
+    - A [Kantian](/docs/phil/people/kant) insight: the *real* problem 
       is *semantic* skepticism.
         - He doesn't take it for granted that we can 'represent' reality and 
           merely have to worry about whether or not that representation is true.
@@ -67,7 +67,7 @@ Descartes himself.
   representation as a primitive and infer reason-relations in terms of it. 
   Rationalists treat reason relations as primitive, explain representational 
   content in terms of inferential relations.
-    - Rationalist [Leibniz](/docs/phil/people/leibniz/index.qmd) would have us 
+    - Rationalist [Leibniz](/docs/phil/people/leibniz) would have us 
       understand the content of the map as the 
       inferences that someone who treats it as a map could make about terrain 
       facts (e.g. a river) from map-facts (wavy-blue line).
@@ -84,7 +84,7 @@ Descartes himself.
     - Representation is a wider concept than description - Brandom thinks that 
       Sellars' anti-descriptivism is a form of anti-representationalism.
         - E.g. proper names represent without being descriptions, in 
-          [*Naming and Necessity*](/docs/phil/people/kripke/works/naming_and_necessity/index.qmd).
+          [*Naming and Necessity*](/docs/phil/people/kripke/works/naming_and_necessity).
 
 ## Lessons
 
@@ -94,13 +94,13 @@ Descartes himself.
     representings and representeds.
     - Considering the inferences of map facts to terrain facts, we also must 
       accept that if the terrain were different, the map fact would be different.
-    - Related to [Fodor](/docs/phil/people/fodor/index.qmd)'s account of 
+    - Related to [Fodor](/docs/phil/people/fodor)'s account of 
       representation in terms of "one-way 
       counterfactual dependencies of 'horses' on horses".
   - Representation has a normative dimension
     - To treat representation as concerning what inferences we can make is a 
       normative order.
-    - [Hegel](/docs/phil/people/hegel/index.qmd) appreciated this: to count as 
+    - [Hegel](/docs/phil/people/hegel) appreciated this: to count as 
       representing something is to be 
       responsible to the represented thing (what is represented provides the 
       normative standard for correctness of representing). What is represented 
@@ -148,8 +148,8 @@ Descartes himself.
         approach to meaning
     - Investigations = anti-representationalism.
       - Anthropological tradition focuses on natural languages, in tradition of 
-        [Dewey](/docs/phil/people/dewey/index.qmd). Rorty claims 
-        [Heidegger](/docs/phil/people/heidegger/index.qmd) also in this 
+        [Dewey](/docs/phil/people/dewey). Rorty claims 
+        [Heidegger](/docs/phil/people/heidegger) also in this 
         tradition, which both sides 
         (pragmatists and Heidegger allies)  don't like. Focus is not on meaning 
         but on use.
@@ -172,7 +172,7 @@ Descartes himself.
     non-cognitive or non-representational mental states or attitudes.
 
 ## Modern anti-representationalism
-- [Huw Price](/docs/phil/people/price/index.qmd) synthesizes these two strands 
+- [Huw Price](/docs/phil/people/price) synthesizes these two strands 
   of anti-representationalism.
   - Agrees with Rorty that representation should never be used to do substantial 
     explanatory work. They are global antirepresentationalists, which is a 
