--- a/docs/phil/problems/is_ought.qmd
+++ b/docs/phil/problems/is_ought.qmd
@@ -13,4 +13,7 @@ listing:
 
 The is-ought problem. [Hume](/docs/phil/people/hume). 
 
+The infeasibility of reducing "ought talk" to "is talk" is the same problem [(according to Sellars)](/docs/phil/people/sellars/works/psim/community.qmd) 
+as reducing "the personal" (e.g. believing) to something at the individual rather than community (network of rights and duties)level.
+
 TODO
